# nlweb-ecommerce

./: .env.example  .gitignore  README.md  start.sh
.atl/: .skill-registry.cache.json  skill-registry.md
backend/config/: config_embedding.yaml  config_llm.yaml  config_nlweb.yaml  config_retrieval.yaml  prompts.xml
backend/data/catalog/: products.jsonl  travels.jsonl
backend/models/: qwen2.5-7b-rank.Modelfile
backend/scripts/: ingest.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.jsx
frontend/src/components/: ProductCard.jsx  ResultsGrid.jsx  SearchBar.jsx  TravelCard.jsx
frontend/src/stores/: search.js
frontend/src/styles/: global.css
gateway/: Cargo.toml
gateway/src/: main.rs
openspec/: config.yaml
openspec/changes/conversation-memory/: apply-progress.md  design.md  proposal.md  spec.md  tasks.md
